Fix search section height on mobile

--- a/src/app/modules/movies/movie-list/movie-list.component.scss
+++ b/src/app/modules/movies/movie-list/movie-list.component.scss
@@ -1,6 +1,15 @@
-.list-container {
-  max-height: 80vh;
-  overflow: auto;
+@media only screen and (min-width: 900px) {
+  .list-container {
+    max-height: 80vh;
+    overflow: auto;
+    padding-bottom: 20px;
+  }
+}
+
+@media only screen and (max-width: 900px) {
+  .scroll-btn {
+    display: none;
+  }
 }
 
 .movies-list {
@@ -18,6 +27,10 @@
   position: fixed;
   right: 2%;
   bottom: 5%;
+
+  @media only screen and (min-width: 900px) {
+    display: none;
+  }
 }
 
 .grey-txt {
